# OmniEvent

./: .gitignore  LICENSE  README  README.md  pagerank.py  pyproject.toml  requirements.txt
OmniEvent/: arguments.py  infer.py  trainer.py  trainer_seq2seq.py  utils.py
OmniEvent/aggregation/: aggregation.py
OmniEvent/backbone/: backbone.py
OmniEvent/evaluation/: README.md  convert_format.py  dump_result.py  metric.py  output_standardization.py  utils.py
OmniEvent/head/: classification.py
OmniEvent/infer_module/: io_format.py  seq2seq.py
OmniEvent/input_engineering/: base_processor.py  input_utils.py  mrc_converter.py  mrc_processor.py  seq2seq_processor.py  sequence_labeling_processor.py  token_classification_processor.py  whitespace_tokenizer.py
OmniEvent/model/: constraint_decoding.py  model.py
OpenEE/: arguments.py  infer.py  test_infer.py  trainer.py  trainer_seq2seq.py  utils.py
OpenEE/aggregation/: aggregation.py
OpenEE/backbone/: backbone.py
OpenEE/benchmark/: LDC2015E29.py  ace2005-plus.py  kbp-total.py
OpenEE/evaluation/: convert_format.py  dump_result.py  metric.py  seq2seq_parser.py  utils.py
OpenEE/head/: classification.py  crf.py  head.py
config/: README.md  deepspeed.json  deepspeed_none_zero.json  deepspeed_zero_2.json  deepspeed_zero_3.json
data/: format.json
examples/: README.md
scripts/: requirements.txt
server/: extract_utils.py  main.py  test.py
src/: EAE_config.yaml  EAE_main.py  config.yaml  main.py  mrc.py  mrc.sh  mrc.yaml  run.sh  seq2seq.py  seq2seq.yaml  seq2seq_main.py
tests/: test_infer.py
(+520 files in other folders)
