[tool.setuptools]
packages = ["OmniEvent"]


[project]
name = "OmniEvent"
version = "0.1.1"
description = "A tookit for event extraction."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/THU-KEG/OmniEvent"
"Bug Tracker" = "https://github.com/THU-KEG/OmniEvent/issues"