[tool.setuptools]
packages = [
    "OmniEvent",
    "OmniEvent.aggregation",
    "OmniEvent.backbone",
    "OmniEvent.evaluation",
    "OmniEvent.head",
    "OmniEvent.infer_module",
    "OmniEvent.input_engineering",
    "OmniEvent.model"
]


[project]
name = "OmniEvent"
version = "0.1.7"
description = "A tookit for event extraction."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn==1.0.2",
    "six==1.16.0",
    "transformers==4.21.2",
    "sentencepiece==0.1.97",
    "seqeval==1.2.2",
    "protobuf==3.20.1",
    "deepspeed==0.7.2",
    "jsonlines==3.1.0",
    "pyyaml==6.0"
]

[project.urls]
"Homepage" = "https://github.com/THU-KEG/OmniEvent"
"Bug Tracker" = "https://github.com/THU-KEG/OmniEvent/issues"